--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,39 +1,30 @@
 name: golang-pipeline
-on: push
+on:
+    push:
+        branches:
+        - 'main'
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags')
-    steps:
-      - name: Extract Version
-        id: version_step
-        run: |
-          echo "latest_tag=$GITHUB_REPOSITORY:latest" >> $GITHUB_ENV
-      - name: Print Version
-        run: |
-          echo $latest_tag
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+    deploy:
+        runs-on: ubuntu-latest
+        steps:
+            - 
+                name: Set up QEMU
+                uses: docker/setup-qemu-action@v1
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+            - 
+                name: Set up Docker Buildx
+                uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+            - 
+                name: Login to DockerHub
+                uses: docker/login-action@v1
+                with:
+                    username: ${{ secrets.DOCKER_USERNAME }}
+                    password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
-      - name: PrepareReg Names
-        id: read-docker-image-identifiers
-        run: |
-          echo LASTEST_TAG=$(echo $latest_tag | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: |
-            ${{env.LASTEST_TAG}}
-          build-args: |
-            $latest_tag
+            - 
+                name: Build and push
+                uses: docker/build-push-action@v4
+                with:
+                    push: true
+                    tags: sadokf/searchstax-mock-api:latest
