--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,15 +9,15 @@ jobs:
         steps:
             - 
                 name: Set up QEMU
-                uses: docker/setup-qemu-action@v1
+                uses: docker/setup-qemu-actio@v2
 
             - 
                 name: Set up Docker Buildx
-                uses: docker/setup-buildx-action@v1
+                uses: docker/setup-buildx-action@v2
 
             - 
                 name: Login to DockerHub
-                uses: docker/login-action@v1
+                uses: docker/login-action@v2
                 with:
                     username: ${{ secrets.DOCKER_USERNAME }}
                     password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
