--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,7 +9,7 @@ jobs:
         steps:
             - 
                 name: Set up QEMU
-                uses: docker/setup-qemu-actio@v2
+                uses: docker/setup-qemu-action@v2
 
             - 
                 name: Set up Docker Buildx
