--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -27,4 +27,5 @@ jobs:
                 uses: docker/build-push-action@v4
                 with:
                     push: true
+                    platforms: linux/amd64,linux/arm64,linux/arm/v8
                     tags: sadokf/searchstax-mock-api:latest
